--- a/visimisi.html
+++ b/visimisi.html
@@ -112,7 +112,7 @@ Menjadi Jurusan/Prodi Teknik Informatika yang Unggul dan Kompetitif di ASEAN pad
         </form>
       </div>
 
-
+<!-- Sidebar -->
 <div class="sidebar-box">
        <h4>Lainnya</h4>
         <ul class="latest-posts">
